[workspace]
members = [
    "das-lock-lib",
    "dispatch",
    "eip712-lib",
]
exclude = ["tests", "tools"]

[workspace.dependencies]
das-types = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, branch = "master" }
das-map = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false,branch = "master" }
das-core = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, branch = "master" }
ckb-std = "0.13.0"
ckb-types = { version = "=0.108.0" }
molecule = { version = "0.7", default-features = false }
hex = { default-features = false, version = "0.4.2" }


[profile.release]
overflow-checks = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
