[workspace]
members = [
    "das-lock-lib",
    "dispatch",
    "eip712-lib",
]
exclude = ["tests", "tools"]

[workspace.dependencies]
das-types = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, rev = "171756f" }
das-map = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false,rev = "171756f" }
das-core = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, rev = "171756f" }
eip712 = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, rev = "171756f" }
witness-parser = { git = "https://github.com/dotbitHQ/das-contracts-private.git",  default-features = false,  rev = "171756f" }
config = { package = "config", git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, rev = "171756f" }
das-dynamic-libs = { git = "https://github.com/dotbitHQ/das-contracts-private.git", rev = "171756f" }
ckb-std = "0.15.0"
ckb-types = { version = "0.116" }
molecule = { version = "0.7", default-features = false }
hex = { default-features = false, version = "0.4.2" }

[profile.release]
overflow-checks = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
