[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"


[dependencies]
ckb-std = { version = "0.13.0" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
blake2b-rs = {version = "0.2.0", default-features = false}
strum = { default-features = false, features = ["derive"], version = "0.25" }
strum_macros = "0.25"
num_enum = { version = "0.6.1", default-features = false }
das-types = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, branch = "testnet2" }
das-core = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false,  branch = "testnet2" }
das-dynamic-libs = { git = "https://github.com/dotbitHQ/das-contracts-private.git", branch = "testnet2" }
witness-parser = { git = "https://github.com/dotbitHQ/das-contracts-private.git",  default-features = false,  branch = "testnet2" }

ethnum = "1.4"
log = "0.4.20"

[features]
default = []
mainnet = ["das-core/mainnet"]
testnet2 = ["das-core/testnet"]
testnet3 = ["das-core/testnet"]

[profile.dev]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[profile.release]
overflow-checks = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
