[package]
name = "dispatch"
version = "1.0.0"
edition = "2021"

[dependencies]
blake2b-rs = {version = "0.2.0", default-features = false}
ckb-std = { version = "0.13.0" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
num_enum = { version = "0.7.2", default-features = false }
strum = { default-features = false, features = ["derive"], version = "0.26.1" }
strum_macros = "0.26.1"
das-types = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, branch = "testnet2" }
das-core = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false,  branch = "testnet2" }
das-dynamic-libs = { git = "https://github.com/dotbitHQ/das-contracts-private.git", branch = "testnet2" }
witness-parser = { git = "https://github.com/dotbitHQ/das-contracts-private.git",  default-features = false,  branch = "testnet2" }
#das-types = { path = '../../das-contracts-private/libs/das-types', default-features = false }
#das-core = {path = '../../das-contracts-private/libs/das-core', default-features = false}
#das-dynamic-libs = { path = '../../das-contracts-private/libs/das-dynamic-libs', default-features = false }
#witness-parser = { path = '../../das-contracts-private/libs/witness-parser', default-features = false }

[features]
default = []
mainnet = ["das-core/mainnet"]
testnet2 = ["das-core/testnet"]
testnet3 = ["das-core/testnet"]


[profile.dev]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[profile.release]
overflow-checks = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
