[package]
name = "dispatch"
version = "1.0.0"
edition = "2021"

[dependencies]
blake2b-rs = {version = "0.2.0", default-features = false}
ckb-std = { workspace = true }
hex = { workspace = true, features = ["alloc"]}
num_enum = { version = "0.7.2", default-features = false }
strum = { default-features = false, features = ["derive"], version = "0.26.1" }
strum_macros = "0.26.1"
das-core = { workspace = true }
das-types = { workspace = true }
das-dynamic-libs = { workspace = true }
config = { workspace = true, features = ["no_std"] }
witness-parser = { workspace = true }

[features]
default = []
mainnet = ["das-core/mainnet"]
testnet2 = ["das-core/testnet"]
testnet3 = ["das-core/testnet"]


[profile.dev]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[profile.release]
overflow-checks = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
