[package]
name = "eip712-lib"
version = "1.1.0"
edition = "2021"

[features]
default = []
mainnet = ["das-core/mainnet"]
testnet2 = ["das-core/testnet"]
testnet3 = ["das-core/testnet"]

[dependencies]
ckb-std = "0.13.0"
das-core = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, branch = "testnet2" }
das-map = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, branch = "testnet2" }
das-types = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, branch = "testnet2" }
eip712 = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false, branch = "testnet2" }
witness-parser = { git = "https://github.com/dotbitHQ/das-contracts-private.git",  default-features = false,  branch = "testnet2" }
das-dynamic-libs = { git = "https://github.com/dotbitHQ/das-contracts-private.git", branch = "testnet2" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
