[package]
name = "eip712-lib"
version = "1.1.0"
edition = "2021"

[features]
default = []
mainnet = ["das-core/mainnet"]
testnet2 = ["das-core/testnet"]
testnet3 = ["das-core/testnet"]

[dependencies]
ckb-std = { workspace = true }
das-core = { workspace = true }
config = { workspace = true, features = ["no_std"] }
das-map = { workspace = true }
das-types = { workspace = true }
eip712 = { workspace = true }
witness-parser = { workspace = true }
das-dynamic-libs = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
