[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { version = "0.13.0" }

#log = { version = "0.4.17", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
blake2b-rs = {version = "0.2.0", default-features = false}
#das-core = {path = "./libs/das-core", version = "1.4.0"}
#serde = { version = "1.0", default-features = false, features = ["alloc"] }
#serde-json-core = "0.5"
#sha2 = {version = "0.10", default-features = false}
#base64-url = {version = "2.0", default-features = false}
#base64 = {version = "0.21", default-features = false, features = ["alloc"]}
#strum = { version = "0.25" }
#strum_macros = "0.25"
das-types = { git = "https://github.com/dotbitHQ/das-types-private.git", default-features = false, rev = "17e1a0e" }
das-core = { git = "https://github.com/dotbitHQ/das-contracts-private.git", default-features = false }

das-proc-macro = { path = "../../das-proc-macro"}
[features]
default = []
mainnet = ["das-core/mainnet", "das-types/no_std"]
testnet2 = ["das-core/testnet", "das-types/no_std"]
testnet3 = ["das-core/testnet", "das-types/no_std"]

#for test
test-single = ["das-proc-macro/test-single"]
test-partial = ["das-proc-macro/test-partial"]
test-dev = ["das-proc-macro/test-dev"]
test-all = ["das-proc-macro/test-all"]
#[package.metadata.bootimage]
#test-success-exit-code = -1



[profile.release]
overflow-checks = true
opt-level = 's'
lto = false
codegen-units = 1
panic = 'abort'
